# PracticaEDAMarcAxelXavier

./: CMakeLists.txt  README.md  dades.json  global.c  global.h  main.c  menu.c  menu.h  structs.h  taulaHash.c  taulaHash.h  usuari.c  usuari.h
files_c/: cola.c  dadesJson.c  filtres.c  json.c  menu.c  publicacions.c  taulaHash.c  usuari.c
files_h/: cola.h  dadesJson.h  json.h  menu.h  publicacions.h  structs.h  taulaHash.h  usuari.h
